        all. They are, in effect, manual edit only.  Because they have a UFID,
        they will accumulate other facts -- grants, courses.  If they are
        manually edited to include UFEntity, they will have papers added as
        well.
     -- Remove all references to homeDeptFor.  This will be added by the
        inferencer as an inverse property to homeDept
     Version 0.92 MC 2013-09-08
     -- URI Exception list handling added to case 3
     Version 0.93 MC 2013-10-03
     -- Added foaf:Person assertion to add_person
     Version 0.94 MC 2013-10-05
     -- Check for ok_position to see if position should be added (case 1 and
        case 3).  We only add HR positions, not the "positions" from course
        ingest (HR_POSITION=0) which are used to add new people.  We do not
        add positions to excluded departments.
    Version 0.95 MC 2013-10-17
     -- Add Ops Lump Sum Payment to list of excluded position titles
    Version 0.96 MC 2013-12-11
     -- Correct support for adding people without positions
    Version 0.97 MC 2013-12-16
     -- Support adding people without home departments
    Version 0.98 MC 2014-02-24
    --  Fix email addresses on the way in
	Version 2.00 MC 2014-07-20
	--  prepare_people reads data, handles all exception processing.  Relies on 
	    six shelves.  See create_shelves
	--  Unicode support throughout
	--  Position title exceptions added as a shelve, managed externally

    Future enhancements:
     -- For case 2, close end dates for positions with explicit HR data rather
        than inferring an end date via the absence of HR data
     -- read external sources into standard tag name structures.  Do not carry
        local names (JOBCODE_DESCRIPTION) into the code.
     -- explore data source and process for assigning person type Librarian. UF
        marks librarians as Faculty in HR data.  No indication that the person
        is a librarian by salary plan