@@ -1,5 +1,14 @@
-DEPTID|UFID|JOBCODE|SAL_ADMIN_PLAN|START_DATE|END_DATE|JOBCODE_DESCRIPTION|HR_POSITION
-34160200|84957104|178|CTSY|2013-07-01|NULL|CO CLIN POSTDOC ASO|1
-13500000|80100558|1479|OPSN|2014-02-07|NULL|OPS HOURLY NON-SECRETARY/CLERK|1
-29200000|83441167|54|OF12|2013-07-01|NULL|ADJ PROF|1
-16900000|80104480|718|CTSY|2006-11-17|NULL|CO POSTDOC ASO|1
+DEPTID|UFID|JOBCODE|SAL_ADMIN_PLAN|START_DATE|END_DATE|JOBCODE_DESCRIPTION|HR_POSITION|COMMENT
+34160200|84957104|178|CTSY|2013-07-01|NULL|CO CLIN POSTDOC ASO|1|
+13500000|80100558|1479|OPSN|2014-02-07|NULL|OPS HOURLY NON-SECRETARY/CLERK|1|Invalid Salary Plan
+29200000|83441167|54|OF12|2013-07-01|NULL|ADJ PROF|1|
+16900000|80104480|718|CTSY|2006-11-17|NULL|CO POSTDOC ASO|1|
+29680100|84808900|||2013-07-21|2014-07-21|CO-DIRECTOR|0|CAN USE POSITION DATA TO ADD INFORMAL POSITIONS
+34160200|99999628|178|CTSY|2013-07-01|NULL|CO CLIN POSTDOC ASO|1|UFID IN EXCEPTIONS
+34160200|11223344|178|CTSY|2013-07-01|NULL|CO CLIN POSTDOC ASO|1|This is Test A Record.  URI is in exceptions
+73001000|84808900|178|CTSY|2013-07-01|NULL|CO CLIN POSTDOC ASO|1|Department is on the exception list
+34160200|55667788|178|CTSY|2013-07-01|NULL|CO CLIN POSTDOC ASO|1|This UFID is not in Privacy Data
+34160200|80136421|178|CTSY|2013-07-01|NULL|CO CLIN POSTDOC ASO|1|Has protect flag set
+34160200|80136440|178|CTSY|2013-07-01|NULL|CO CLIN POSTDOC ASO|1|Has security flag set
+34160200|89616918|178|CTSY|2013-07-01|NULL|CO CLIN POSTDOC ASO|1|Has home department on exception list
+34160200|84808900|178|CTSY|2013-07-01|NULL|ACADEMIC LUMP SUMP PAYMENT|1|Has positon description on exception list
